test/good/functions/name01.px

func printInt() def
    return

func main() def
    print "ok"
    return

main()
