test/bad/functions/call3.px

func f() def
    return

func main() Int def
    f(false)
    return 0
